--- a/MobileTag/MobileTag.csproj
+++ b/MobileTag/MobileTag.csproj
@@ -57,7 +57,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CreateAccountActivity.cs" />
+    <Compile Include="Shared\Database.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="Models\Cell.cs" />
+    <Compile Include="Models\Player.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLtest.cs" />
