--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-﻿################################################################################
+################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
 /.vs/MobileTag/v15/sqlite3/db.lock
+
+/.vs/MobileTag/Server/sqlite3/*
 
 /.vs/MobileTag/v14/.suo
 
