--- a/MobileTag/MobileTag.csproj
+++ b/MobileTag/MobileTag.csproj
@@ -57,6 +57,10 @@
   <ItemGroup>
     <Compile Include="CreateAccountActivity.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="Models\Cell.cs" />
+    <Compile Include="Models\GameModel.cs" />
+    <Compile Include="Models\Player.cs" />
+    <Compile Include="Models\Team.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SharedCode\Database.cs" />
