--- a/MobileTag/MobileTag.csproj
+++ b/MobileTag/MobileTag.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Models\Team.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SharedCode\ActivityLink.cs" />
     <Compile Include="SharedCode\Database.cs" />
   </ItemGroup>
   <ItemGroup>
