--- a/MobileTag/MobileTag.csproj
+++ b/MobileTag/MobileTag.csproj
@@ -102,7 +102,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingsActivity.cs" />
     <Compile Include="SharedCode\ActivityLink.cs" />
+    <Compile Include="SharedCode\ColorCodes.cs" />
     <Compile Include="SharedCode\Database.cs" />
+    <Compile Include="SharedCode\MapOverlay.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
