--- a/MobileTag/Properties/AndroidManifest.xml
+++ b/MobileTag/Properties/AndroidManifest.xml
@@ -6,7 +6,7 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-	<application android:allowBackup="true" android:label="@string/app_name">
+	<application android:allowBackup="true" android:label="@string/app_name" android:theme="@style/MyTheme">
 		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBvgTfTO62jv-h2qfhnR6X6lvdNKasIcbc" />
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 		<uses-permission android:name="android.permission.INTERNET" />
