--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 obj/
 [Bb]in
 [Dd]ebug*/
+/packages/Xamarin.Android.Support.Vector.Drawable.25.1.1/build/MonoAndroid70/Xamarin.Android.Support.Tasks.VectorDrawable.dll
