--- a/MobileTag/MobileTag.csproj
+++ b/MobileTag/MobileTag.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Models\Mine.cs" />
     <Compile Include="Models\Player.cs" />
     <Compile Include="Models\Team.cs" />
+    <Compile Include="Models\Wallet.cs" />
     <Compile Include="ProfileActivity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
