Added overlay click handlers, and refactored UpdateOverlay code

--- a/MobileTag/MobileTag.csproj
+++ b/MobileTag/MobileTag.csproj
@@ -136,9 +136,11 @@
     <Compile Include="SharedCode\ActivityLink.cs" />
     <Compile Include="SharedCode\ColorCode.cs" />
     <Compile Include="SharedCode\Database.cs" />
+    <Compile Include="SharedCode\EnemyOverlayClickHandler.cs" />
     <Compile Include="SharedCode\IOverlayClickHandler.cs" />
     <Compile Include="SharedCode\MapOverlay.cs" />
     <Compile Include="SharedCode\CellHub.cs" />
+    <Compile Include="SharedCode\FriendlyOverlayClickHandler.cs" />
     <Compile Include="SplashScreen.cs" />
   </ItemGroup>
   <ItemGroup>
