--- a/MobileTag/MobileTag.csproj
+++ b/MobileTag/MobileTag.csproj
@@ -270,6 +270,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\Drawable\red_button.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\Drawable\mining.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
