--- a/MobileTag/packages.config
+++ b/MobileTag/packages.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microcharts" version="0.7.1" targetFramework="monoandroid71" />
   <package id="Microsoft.AspNet.SignalR.Client" version="2.2.2" targetFramework="monoandroid71" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid71" />
   <package id="Refractored.GifImageView" version="2.0.0" targetFramework="monoandroid71" />
+  <package id="SkiaSharp" version="1.59.1" targetFramework="monoandroid71" />
+  <package id="SkiaSharp.Views" version="1.59.1.1" targetFramework="monoandroid71" />
   <package id="System.Data.SqlClient" version="4.4.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.1.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Compat" version="25.1.1" targetFramework="monoandroid71" />
