BitmapWorker Added but not working

--- a/MobileTag/MobileTag.csproj
+++ b/MobileTag/MobileTag.csproj
@@ -136,9 +136,12 @@
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="SettingsActivity.cs" />
     <Compile Include="SharedCode\ActivityLink.cs" />
+    <Compile Include="SharedCode\BitmapWorkerTask.cs" />
     <Compile Include="SharedCode\ColorCode.cs" />
     <Compile Include="SharedCode\Database.cs" />
     <Compile Include="SharedCode\EnemyOverlayClickHandler.cs" />
+    <Compile Include="SharedCode\CameraInterface.cs" />
+    <Compile Include="SharedCode\ICameraInterface.cs" />
     <Compile Include="SharedCode\IOverlayClickHandler.cs" />
     <Compile Include="SharedCode\MapOverlay.cs" />
     <Compile Include="SharedCode\CellHub.cs" />
